[package]
name = "csub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.1"
regex = "1.8.1"
rust_iso639 = "0.0.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
zhconv = "0.1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
fl2rust = "0.5.12"
